ketvirtos dienos mogo ikelimas

--- a/3diena/mogo-projektas/styles/abstracts/_variables.scss
+++ b/3diena/mogo-projektas/styles/abstracts/_variables.scss
@@ -29,3 +29,10 @@ $textgrey: #999999;
 $mint: #95e1d3;
 $textblack: #333333;
 $lightmint: #b5eae0;
+
+// breakpoints
+
+$extra-large-breakpoint: 1199px;
+$large-breakpoint: 992px;
+$medium-breakpoint: 768px;
+$small-breakpoint: 600px;
