--- a/3diena/mogo-projektas/styles/pages/_blog.scss
+++ b/3diena/mogo-projektas/styles/pages/_blog.scss
@@ -3,7 +3,6 @@
 #blog {
 
   .blog-row {
-    // border: 1px solid red;
     width: 100%;
 
     .article {
@@ -16,19 +15,13 @@
         width: 100%;
       }
 
-      h5 {
-        font-family: $montserrat;
+      h6 {
         padding: 20px 0 20px 10px;
-        text-transform: uppercase;
       }
 
       p {
-        font-family: $roboto;
-        color: $textgrey;
-        font-size: $small;
-        padding-left: 10px;
         padding-bottom: 20px;
-        line-height: 1.6;
+        padding-left: 10px;
         border-bottom: 1px solid $lightgrey;
       }
 
@@ -45,7 +38,6 @@
 
         p {
           display: inline-block;
-          font-style: italic;
           padding: 0;
           border: none;
         }
@@ -59,6 +51,92 @@
         .comments {
           img {
             vertical-align: middle;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: $large-breakpoint) and (max-width: $extra-large-breakpoint) {
+
+  #blog {
+    .red-line {
+      margin-bottom: 30px;
+    }
+
+    .blog-row {
+      .article {
+        display: -inline-block;
+        width: 32%;
+        margin: 0 auto;
+
+        p {
+          padding-left: 10px;
+        }
+
+        .views-comments {
+          width: 70%;
+          padding: 15px 0 35px 10px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: $small-breakpoint) and (max-width: $large-breakpoint) {
+
+  #blog {
+    .red-line {
+      margin-bottom: 30px;
+    }
+
+    .blog-row {
+      .article {
+        display: block;
+        width: 50%;
+        margin: 0 auto;
+
+        p {
+          padding-left: 10px;
+        }
+
+        .views-comments {
+          width: 50%;
+          padding: 15px 0 35px 10px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: $small-breakpoint) {
+  #blog {
+    .red-line {
+      margin-bottom: 30px;
+    }
+
+    .blog-row {
+      .article {
+        display: block;
+        width: 80%;
+        margin: 0 auto;
+
+        h6 {
+          font-size: $ssmallest;
+        }
+
+        p {
+          font-size: $ssmallest;
+          padding-left: 10px;
+        }
+
+        .views-comments {
+          width: 60%;
+          padding: 15px 0 35px 10px;
+
+          p {
+            font-size: $ssmallest;
           }
         }
       }
