--- a/3diena/mogo-projektas/styles/pages/_service.scss
+++ b/3diena/mogo-projektas/styles/pages/_service.scss
@@ -20,16 +20,8 @@
         width: 78%;
         padding: 0 20px;
 
-        h5 {
-          font-family: $montserrat;
-          color: $textblack;
+        h6 {
           padding-bottom: 20px;
-        }
-
-        p {
-          font-family: $roboto;
-          color: $textgrey;
-          line-height: 1.6;
         }
       }
     }
@@ -43,7 +35,7 @@
 // devices section
 
 .devices {
-  background: url('../../../../3diena/mogo-projektas/images/another_background.png') center;
+  background: url('../images/another_background.png') center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 905px;
@@ -60,11 +52,13 @@
 
     .picture {
       display: inline-block;
-      width: 47%;
-      padding-right: 30px;
+      width: 49%;
+      vertical-align: bottom;
+      padding-right: 10px;
 
       img {
         width: 100%;
+        max-width: 570px;
       }
     }
 
@@ -88,19 +82,12 @@
         vertical-align: top;
         padding: 10px 0 0 10px;
 
-        h5 {
-          font-family: $montserrat;
-          color: $textblack;
+        h6 {
           padding-bottom: 20px;
           display: inline;
         }
 
         p {
-          font-family: $roboto;
-          color: $textgrey;
-          font-style: italic;
-          line-height: 1.6;
-          font-size: $small;
           display: inline;
           width: 50%;
         }
@@ -109,6 +96,18 @@
       .activity-icon {
         width: 5%;
         vertical-align: middle;
+
+        img {
+          width: 100%;
+          max-width: 30px;
+        }
+      }
+
+      .activity-icon:nth-child(2) {
+        img {
+          width: 100%;
+          max-width: 7px;
+        }
       }
     }
 
@@ -130,7 +129,7 @@
 // reviews section 1
 
 .reviews-section-one {
-  background: url('../../../../3diena/mogo-projektas/images/grey-line.jpg') center;
+  background: url('../images/grey-line.jpg') center;
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -168,11 +167,6 @@
       width: 65%;
 
       p {
-        font-family: $roboto;
-        color: $textgrey;
-        font-style: italic;
-        line-height: 1.6;
-        font-size: $smaller;
         margin-bottom: 15px;
       }
 
@@ -182,7 +176,6 @@
       }
 
       h4 {
-        font-family: $kaushan;
         display: inline-block;
       }
     }
@@ -193,8 +186,6 @@
 
 .team {
   .team-row {
-    text-align: center;
-
     .team-member {
       display: inline-block;
       width: 31%;
@@ -204,14 +195,8 @@
         width: 100%;
       }
 
-      h5 {
+      h6 {
         margin: 30px 0 15px 0;
-      }
-
-      p {
-        color: $textgrey;
-        font-style: italic;
-        font-family: $roboto;
       }
     }
   }
@@ -220,14 +205,469 @@
 // logo section
 
 .logos {
-  background: url('../../../../3diena/mogo-projektas/images/grey-line.jpg') center;
+  background: url('../images/grey-line.jpg') center;
   background-repeat: no-repeat;
   background-size: cover;
 
   .logo-image {
-
     img {
       width: 100%;
+      margin: 60px 0;
+    }
+  }
+}
+
+// breakpoints
+
+@media only screen and (min-width: $large-breakpoint) and (max-width: $extra-large-breakpoint) {
+
+  // service section
+
+  #service {
+    .services {
+      margin: 0 auto;
+
+      .service-item {
+        display: block;
+        width: 50%;
+        padding: 50px 0 50px 0;
+        margin: 0 auto;
+
+        .service-icon {
+          display: inline-block;
+          width: 5%;
+          padding-right: 10px;
+          padding-left: 10px;
+        }
+
+        .service-text {
+          display: inline-block;
+          width: 80%;
+          padding: 0 20px;
+        }
+      }
+    }
+  }
+
+  // what we do section
+  .what-we-do {
+
+    .activity-section {
+
+      .picture {
+        display: block;
+        width: 50%;
+        padding: 0;
+        margin: 0 auto;
+
+        img {
+          width: 100%;
+          max-width: 570px;
+        }
+      }
+
+      .activity {
+        display: block;
+        width: 50%;
+        margin: 0 auto;
+        padding: 0;
+
+        .activity-item:nth-child(2) {
+          margin-bottom: 10px;
+
+          .activity-text {
+            width: 85%;
+            padding-right: 30px;
+          }
+        }
+      }
+    }
+  }
+
+
+  // reviews section 1
+
+  .reviews-section-one {
+    .review-items {
+      .review-item-text {
+        width: 60%;
+      }
+    }
+  }
+
+}
+
+@media only screen and (min-width: $medium-breakpoint) and (max-width: $large-breakpoint) {
+  // service section
+
+  #service {
+    .services {
+      margin: 0 auto;
+
+      .service-item {
+        display: block;
+        width: 40%;
+        padding: 50px 0px 50px 0px;
+        margin: 0 auto;
+
+        .service-icon {
+          display: inline-block;
+          width: 5%;
+          padding-right: 20px;
+        }
+
+        .service-text {
+          display: inline-block;
+          width: 80%;
+          padding: 0 0px 0px 10px;
+        }
+      }
+    }
+  }
+
+  // what we do section
+  .what-we-do {
+
+    .activity-section {
+
+      .picture {
+        display: block;
+        width: 50%;
+        padding: 0;
+        margin: 0 auto;
+
+        img {
+          width: 100%;
+          max-width: 570px;
+        }
+      }
+
+      .activity {
+        display: block;
+        width: 50%;
+        margin: 0 auto;
+        padding: 0;
+
+        .activity-item {
+          padding: 15px;
+
+          .activity-text,
+          .activity-icon {
+            display: inline-block;
+          }
+
+          .activity-text {
+            width: 80%;
+            vertical-align: top;
+            padding: 10px 0 0 10px;
+
+            h6 {
+              padding-bottom: 20px;
+              display: inline;
+            }
+
+            p {
+              display: inline;
+              width: 50%;
+            }
+          }
+
+          .activity-icon {
+            width: 5%;
+            vertical-align: middle;
+            padding-right: 7px;
+          }
+        }
+
+        .activity-item:nth-child(2) {
+          margin-bottom: 10px;
+
+          .activity-text {
+            width: 75%;
+            padding-right: 45px;
+          }
+        }
+      }
+    }
+  }
+
+  // reviews section 1
+
+  .reviews-section-one {
+    .review-items {
+      .review-item-text {
+        width: 60%;
+        padding: 0 40px;
+
+        p,
+        h4 {
+          font-size: $ssmaller;
+        }
+      }
+    }
+  }
+
+}
+
+@media only screen and (min-width: $small-breakpoint) and (max-width: $medium-breakpoint) {
+  // service section
+
+  #service {
+    .services {
+      margin: 0 auto;
+
+      .service-item {
+        display: block;
+        width: 40%;
+        padding: 50px 0px 50px 0px;
+        margin: 0 auto;
+
+        .service-icon {
+          display: inline-block;
+          width: 5%;
+          padding-right: 30px;
+        }
+
+        .service-text {
+          display: inline-block;
+          width: 75%;
+          padding: 0 0px 0px 10px;
+        }
+      }
+    }
+  }
+
+  // what we do section
+  .what-we-do {
+
+    .activity-section {
+
+      .picture {
+        display: block;
+        width: 50%;
+        padding: 0;
+        margin: 0 auto;
+
+        img {
+          width: 100%;
+          max-width: 570px;
+        }
+      }
+
+      .activity {
+        display: block;
+        width: 50%;
+        margin: 0 auto;
+        padding: 0;
+
+        .activity-item {
+          padding: 15px;
+
+          .activity-text,
+          .activity-icon {
+            display: inline-block;
+          }
+
+          .activity-text {
+            width: 75%;
+            vertical-align: top;
+            padding: 0 0 0 10px;
+
+            h6 {
+              padding-bottom: 20px;
+              display: inline;
+            }
+
+            p {
+              display: inline;
+              width: 50%;
+            }
+          }
+
+          .activity-icon {
+            padding-right: 7px;
+          }
+        }
+
+        .activity-item:nth-child(2) {
+          .activity-text {
+            width: 70%;
+            padding-right: 45px;
+          }
+        }
+      }
+    }
+  }
+
+  // reviews section 1
+
+  .reviews-section-one {
+    .review-items {
+      .review-item-text {
+        width: 55%;
+        padding: 0 35px;
+
+        p,
+        h4 {
+          font-size: $small;
+        }
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: $small-breakpoint) {
+  // service section
+
+  #service {
+    .services {
+      margin: 0 auto;
+
+      .service-item {
+        display: block;
+        width: 70%;
+        padding: 50px 0px 50px 0px;
+        margin: 0 auto;
+
+        .service-icon {
+          display: block;
+          width: 5%;
+          padding-bottom: 20px;
+          margin: 0 auto;
+        }
+
+        .service-text {
+          display: inline-block;
+          width: 100%;
+          padding: 0 0px 0px 10px;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  // what we do section
+  .what-we-do {
+
+    .activity-section {
+
+      .picture {
+        display: block;
+        width: 50%;
+        padding: 0;
+        margin: 0 auto;
+
+        img {
+          width: 100%;
+          max-width: 570px;
+        }
+      }
+
+      .activity {
+        display: block;
+        width: 50%;
+        margin: 0 auto;
+        padding: 0;
+
+        .activity-item {
+          padding: 15px;
+
+          .activity-text,
+          .activity-icon {
+            display: inline-block;
+          }
+
+          .activity-text {
+            width: 65%;
+            vertical-align: top;
+            padding: 0 0 0 10px;
+
+            h6 {
+              padding-bottom: 20px;
+              display: inline;
+            }
+
+            p {
+              display: inline;
+              width: 50%;
+            }
+          }
+
+          .activity-icon {
+            padding-right: 10px;
+          }
+        }
+
+        .activity-item:nth-child(2) {
+          .activity-text {
+            width: 65%;
+            padding-right: 30px;
+          }
+        }
+      }
+    }
+  }
+
+  // reviews section 1
+
+  .reviews-section-one {
+    .review-items {
+      .review-item-text {
+        width: 45%;
+        padding: 0;
+        display: block;
+        margin: 0 auto;
+
+        p,
+        h4 {
+          font-size: $ssmallest;
+        }
+
+        h4 {
+          padding-bottom: 20px;
+        }
+      }
+
+      .review-item-picture {
+        padding-left: 0;
+        display: block;
+        margin: 0 auto;
+        padding: 20px 0;
+      }
+
+      .review-item-icon {
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
+
+}
+
+@media only screen and (max-width: $extra-large-breakpoint) {
+
+  // team section 
+  .team {
+    .team-row {
+      .team-member {
+        display: block;
+        width: 50%;
+        padding-right: 15px;
+        margin: 0 auto;
+
+        img {
+          width: 100%;
+        }
+
+        h6 {
+          margin: 30px 0 15px 0;
+        }
+
+        p {
+          margin-bottom: 30px;
+        }
+      }
     }
   }
 }
